Lost.of added